# OpenSynthrain

./: LICENSE  readme.md  synthrain.sln
synthrain/: .gitignore  CMakeLists.txt  DataSequence.cpp  DataSequence.h  Exporter.cpp  Exporter.h  FlowData.cpp  FlowData.h  LogWindow.cpp  LogWindow.h  OGLComputeShader.cpp  OGLComputeShader.h  OGLFloatTexture.cpp  OGLFloatTexture.h  OGLFrameBuffer.cpp  OGLFrameBuffer.h  OGLRenderStage.cpp  OGLRenderStage.h  OGLRenderer.cpp  OGLRenderer.h  OGLShader.cpp  OGLShader.h  OGLTexture.cpp  OGLTexture.h  OGLVideoTexture.cpp  OGLVideoTexture.h  RenderStageBokeh.cpp  RenderStageBokeh.h  RenderStageDrops.cpp  RenderStageDrops.h  RenderStageFog.cpp  RenderStageFog.h  RenderStageMaxPool.cpp  RenderStageMaxPool.h  RenderStageRefract.cpp  RenderStageRefract.h  fvector2.h  imgui.ini  main.cpp  rng.cpp  (+4 more)
synthrain/cmake/: FindSWScale.cmake
synthrain/imgui/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
synthrain/shaders/: .gitignore  basic.frag  basic.vert  basic_alpha.frag  blur.frag  bokeh-billboard.frag  bokeh-billboard.geom  bokeh-circle.geom  bokeh-hex.geom  bokeh.frag  drop.frag  drop.vert  flow_average.comp  fog.frag  noise.frag  refract.frag  scatter.frag
